# mnemosyne

./: .gitignore  Cargo.toml  README.md  README_zh.md  package-lock.json  package.json
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs  openapi.json  state.rs
api/src/routes/: files.rs  index.rs  mod.rs  models.rs  search.rs
asserts/txt/: test_md.md
assets/txt/: test_md.md
cli/: Cargo.toml
cli/src/: main.rs
crates/mnemosyne-core/: Cargo.toml
crates/mnemosyne-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/mnemosyne-index/: Cargo.toml
crates/mnemosyne-index/src/: ann.rs  cosine.rs  hybrid.rs  lib.rs  rrf.rs
crates/mnemosyne-model/: Cargo.toml
crates/mnemosyne-model/src/: bert_impl.rs  clip.rs  downloader.rs  lib.rs  registry.rs  text.rs  whisper_impl.rs
crates/mnemosyne-parser/: Cargo.toml
crates/mnemosyne-parser/src/: audio.rs  chunking.rs  image.rs  lib.rs  pdf.rs  registry.rs  text.rs  video.rs
crates/mnemosyne-retrieval/: Cargo.toml
crates/mnemosyne-retrieval/src/: background.rs  builder.rs  engine.rs  ignore.rs  indexer.rs  lib.rs  watcher.rs
crates/mnemosyne-retrieval/tests/: integration_test.rs  pipeline_test.rs
crates/mnemosyne-storage/: Cargo.toml
crates/mnemosyne-storage/src/: chunk_repo.rs  db.rs  embedding_repo.rs  file_repo.rs  lib.rs  model_repo.rs  sparse_repo.rs
docs/: architecture.md
docs/blog/: mnemosyne-intro.md
docs/faq/: architecture-qa.md  search-strategy.md
docs/whisper_ref/: ref.txt
prd/: enhancement.md  prd.md
scripts/: build.sh  setup.sh
src/: index.html  models.json
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: api.rs  index.rs  logs.rs  mod.rs  models.rs  search.rs
