[package]
name    = "mnemosyne-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mnemosyne-server"
path = "src/main.rs"

[dependencies]
mnemosyne-retrieval = { workspace = true, features = [
    "candle-backend",
    "clip-backend",
    "whisper-backend",
] }
mnemosyne-core.workspace      = true
axum.workspace                = true
tower.workspace               = true
tower-http.workspace          = true
tokio.workspace               = true
serde.workspace               = true
serde_json.workspace          = true
tracing.workspace             = true
tracing-subscriber.workspace  = true
anyhow.workspace              = true
thiserror.workspace           = true
