[package]
name    = "mnemosyne-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mnemosyne-cli"
path = "src/main.rs"

[features]
candle-backend  = ["mnemosyne-retrieval/candle-backend"]
clip-backend    = ["mnemosyne-retrieval/clip-backend"]
whisper-backend = ["mnemosyne-retrieval/whisper-backend"]
metal-backend   = ["mnemosyne-retrieval/metal-backend"]
full            = ["candle-backend", "clip-backend", "whisper-backend"]

[dependencies]
mnemosyne-retrieval.workspace = true
mnemosyne-core.workspace      = true
clap.workspace                = true
tokio.workspace               = true
serde_json.workspace          = true
tracing.workspace             = true
tracing-subscriber.workspace  = true
anyhow.workspace              = true
# API server (for `serve` sub-command)
mnemosyne-api                 = { path = "../api" }
