[package]
name    = "mnemosyne-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name       = "mnemosyne_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mnemosyne"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-dialog = "2"
mnemosyne-retrieval.workspace = true
mnemosyne-core.workspace      = true
serde.workspace               = true
serde_json.workspace          = true
tokio.workspace               = true
tracing.workspace             = true
tracing-subscriber.workspace  = true
anyhow.workspace              = true
