[package]
name        = "mnemosyne-core"
description = "Core types, traits and error definitions for Mnemosyne"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
thiserror.workspace = true
serde.workspace     = true
serde_json.workspace = true
anyhow.workspace    = true
async-trait.workspace = true
uuid.workspace      = true
chrono.workspace    = true
tracing.workspace   = true
