[package]
name        = "mnemosyne-model"
description = "Embedding model loading and inference for Mnemosyne"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

# ── Feature flags ──────────────────────────────────────────────────────────────
# default        : stub embedder, no native deps
# candle-backend : real BERT text embeddings via Candle (requires tokenizers)
# clip-backend   : CLIP image embeddings — DOES NOT require tokenizers
# whisper-backend: Whisper audio transcription via Candle + symphonia for all audio formats
# full           : all three above
[features]
default = []
candle-backend = [
    "dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers",
]
clip-backend = [
    # CLIP vision encoder only needs candle libs + image crate; no tokenizers.
    "dep:candle-core", "dep:candle-nn", "dep:candle-transformers",
    "dep:image",
]
whisper-backend = [
    # Whisper uses candle for inference + tokenizers for decoding + symphonia for audio I/O.
    "dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers",
    "dep:symphonia",
]
full = ["candle-backend", "clip-backend", "whisper-backend"]

[dependencies]
mnemosyne-core.workspace  = true
thiserror.workspace       = true
serde.workspace           = true
serde_json.workspace      = true
anyhow.workspace          = true
tokio.workspace           = true
async-trait.workspace     = true
tracing.workspace         = true
hf-hub.workspace          = true
# Direct HTTP downloader — bypasses hf-hub URL construction bugs.
# Uses rustls to avoid system-proxy interference.
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking", "json", "stream"] }

# candle-backend & whisper-backend
candle-core         = { version = "0.9", optional = true }
candle-nn           = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
# Patched tokenizers (vendor/tokenizers) – gates `mod onig` on `feature = "onig"`
# so the crate compiles without the oniguruma system library installed.
tokenizers = { version = "0.20", default-features = false, optional = true }

# clip-backend
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"], optional = true }

# whisper-backend – symphonia for universal audio format decoding (MP3, WAV, FLAC, …)
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav", "flac", "ogg", "isomp4", "pcm"], optional = true }
