[package]
name        = "mnemosyne-parser"
description = "Pluggable file content parsers for Mnemosyne"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[features]
default = ["pdf", "image-meta"]
pdf        = ["dep:pdf-extract"]
image-meta = ["dep:image"]

[dependencies]
mnemosyne-core.workspace = true
thiserror.workspace      = true
serde.workspace          = true
anyhow.workspace         = true
tokio.workspace          = true
async-trait.workspace    = true
tracing.workspace        = true

image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"], optional = true }
pdf-extract = { version = "0.7", optional = true }
