[package]
name        = "mnemosyne-parser"
description = "Pluggable file content parsers for Mnemosyne"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[features]
default = ["pdf", "image-meta"]
# pdf: pdf-extract (primary, fast for Latin PDFs) + lopdf (native CJK ToUnicode extraction)
pdf        = ["dep:pdf-extract", "dep:lopdf"]
image-meta = ["dep:image"]

[dependencies]
mnemosyne-core.workspace = true
thiserror.workspace      = true
serde.workspace          = true
anyhow.workspace         = true
tokio.workspace          = true
async-trait.workspace    = true
tracing.workspace        = true

image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"], optional = true }
pdf-extract = { version = "0.7", optional = true }
lopdf       = { version = "0.31", optional = true }
