[package]
name        = "mnemosyne-retrieval"
description = "Search engine orchestration layer for Mnemosyne"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[dependencies]
mnemosyne-core.workspace    = true
mnemosyne-storage.workspace = true
mnemosyne-model.workspace   = true
mnemosyne-parser.workspace  = true
mnemosyne-index.workspace   = true
thiserror.workspace         = true
serde.workspace             = true
serde_json.workspace        = true
anyhow.workspace            = true
tokio.workspace             = true
async-trait.workspace       = true
tracing.workspace           = true
uuid.workspace      = true
chrono.workspace    = true
walkdir.workspace   = true
sha2.workspace      = true
hex.workspace       = true
notify.workspace    = true
notify-debouncer-mini.workspace = true

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full", "test-util"] }
