[package]
name        = "mnemosyne-retrieval"
description = "Search engine orchestration layer for Mnemosyne"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

# ── Feature flags ─────────────────────────────────────────────────────────────
# Propagate model backend features down from mnemosyne-model.
# Enable with: cargo build -p mnemosyne-retrieval --features clip-backend,whisper-backend
#
# To run CLIP image retrieval tests (requires local model + real inference):
#   cargo test -p mnemosyne-retrieval --test pipeline_test \
#     --features clip-backend clip_retrieval -- --ignored --nocapture
[features]
candle-backend   = ["mnemosyne-model/candle-backend"]
clip-backend     = ["mnemosyne-model/clip-backend"]
whisper-backend  = ["mnemosyne-model/whisper-backend"]
full             = ["candle-backend", "clip-backend", "whisper-backend"]

[dependencies]
mnemosyne-core.workspace    = true
mnemosyne-storage.workspace = true
mnemosyne-model.workspace   = true
mnemosyne-parser.workspace  = true
mnemosyne-index.workspace   = true
thiserror.workspace         = true
serde.workspace             = true
serde_json.workspace        = true
anyhow.workspace            = true
tokio.workspace             = true
async-trait.workspace       = true
tracing.workspace           = true
uuid.workspace      = true
chrono.workspace    = true
walkdir.workspace   = true
sha2.workspace      = true
hex.workspace       = true
notify.workspace    = true
notify-debouncer-mini.workspace = true

[dev-dependencies]
tempfile            = "3"
tokio               = { version = "1", features = ["full", "test-util"] }
mnemosyne-storage   = { path = "../../crates/mnemosyne-storage" }
mnemosyne-parser    = { path = "../../crates/mnemosyne-parser" }
mnemosyne-core      = { path = "../../crates/mnemosyne-core" }
